--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Επικοινωνια</h2>
                 <p>Επικοινωνήστε μαζί μας με τους παρακάτω τρόπους:</p>
-                <p><a href="">salanivaband@gmail.com</a>
+                <!--<p><a href="">salanivaband@gmail.com</a>-->
                 </p>
                 <ul class="list-inline banner-social-buttons">
-                    
+                    <a href="mailto:salanivaband@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">E-mail</span></a>
                     <li>
                         <a href="https://www.facebook.com/SalaNivaBandGR/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
