--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading"></h1>
                         <p class="intro-text">
-                            <img src="../img/logo.jpg" />
+                            <img src="../img/logo.jpg" class="img-responsive" />
                             <br></p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
