--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading"></h1>
                         <p class="intro-text">
-                            <img src="../img/logo.jpg" class="img-responsive" />
+                            <img src="../img/logo.jpg" class="img-responsive" alt="Sala Niva" />
                             <br></p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -166,8 +166,6 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
