--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Επισημη ιστοσελίδα της ελληνικής ροκ μπάντας Sala Niva">
-    <meta name="keywords" content="Sala Niva,band,rock,greek,gr,music">
+    <meta name="keywords" content="Sala Niva,band,rock,greek,gr,music,κιθαρα,ντραμς,μπασο,ροκ">
     <meta name="author" content="Sala Niva">
     
     <title>Sala Niva</title>
